crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/types/parameterProperty/parameterProperty.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
class c3 {
  constructor(public arg: number = 10) {
    // fails because of comment
  }
  not_constructor(public arg: number = 10) {
  }
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -2,5 +2,6 @@
   constructor(public arg: number = 10) {
     // fails because of comment
   }
-  not_constructor(public arg: number = 10) {}
+  not_constructor(public arg: number = 10) {
+  }
 }
```

# Output

```js
class c3 {
  constructor(public arg: number = 10) {
    // fails because of comment
  }
  not_constructor(public arg: number = 10) {
  }
}
```


# Errors
```
error[SyntaxError]: Illegal use of reserved keyword `public` as an identifier in strict mode
  ┌─ parameterProperty.ts:5:19
  │
5 │   not_constructor(public arg: number = 10) {
  │                   ^^^^^^

error[SyntaxError]: expected `,` but instead found `arg`
  ┌─ parameterProperty.ts:5:26
  │
5 │   not_constructor(public arg: number = 10) {
  │                          ^^^ unexpected


```


